Fixed navi menu overflow.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -43,6 +43,7 @@
 
 #header-right-part {
   flex: none;
+  width: 20rem;
 }
 
 #user-section {
